...
                    isShowingCooldownAlert = true
                }, label: {
                    Text(verbatim: "Set Install Cooldown Elapsed")
                })
                .alert(isPresented: $isShowingCooldownAlert, content: {
                    Alert(title: Text(verbatim: "AI Toggle Prompt cooldown set"),
                          dismissButton: .cancel(Text(verbatim: "Done")))
                })

                Button(action: {
                    Self.resetPickerState()
                }, label: {
                    Text(verbatim: "Reset Picker State (Selection + Shown Flag)")
...
