...
                }

                if shouldShowTabBarShortcut {
                    SettingsCellView(label: UserText.aiChatSettingsEnableTabBarToggle,
                                     subtitle: UserText.aiChatSettingsEnableTabBarSubtitle,
                                     accessory: .toggle(isOn: viewModel.aiChatTabBarEnabledBinding),
                                     accessoryAccessibilityIdentifier: "Settings.AIChat.TabBarToggle")
                }

                if viewModel.state.voiceSearchEnabled {
                    SettingsCellView(label: UserText.aiChatSettingsEnableVoiceSearchToggle,
                                     accessory: .toggle(isOn: viewModel.aiChatVoiceSearchEnabledBinding))
                }
...
