...
                    .aspectRatio(contentMode: .fit)
                    .frame(width: LayoutConstants.daxLogoSize, height: LayoutConstants.daxLogoSize)

                Text(UserText.duckPlayerFeatureName)
                    .foregroundColor(.white)
                    .font(.headline)
                    .accessibilityIdentifier("Duck Player")
            }

            Spacer()

            // Close Button
            Button(
...
