...

    // MARK: - Row Actions

    private func handleResetAll() {
        self.attributedMetricDataStorage.removeAll()
        self.tableView.reloadData()
        showAlert(title: "Done", message: "All Attributed Metrics data stored in UserDefaults has been removed")
    }

    private func handleSetCurrentTime() {
        let alertController = UIAlertController(title: "Set Current Time", message: nil, preferredStyle: .actionSheet)

        let datePicker = UIDatePicker()
...
            self.tableView.reloadData()
            self.showAlert(title: "Done", message: "Current time set to: \(selectedDate.ISO8601Format())\n**RESTART THE APP TO APPLY**")
        }

        let isDatePresent = attributedMetricDataStorage.debugDate != nil

        let deleteAction = UIAlertAction(title: "Delete", style: .destructive) { [weak self] _ in
            guard let self = self else { return }
            self.attributedMetricDataStorage.debugDate = nil
            self.tableView.reloadData()
            self.showAlert(title: "Done", message: "Current time override removed")
        }

...
