...
                    <nil key="highlightedColor"/>
                </label>
                <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" horizontalCompressionResistancePriority="1000" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oCd-LV-OI1">
                    <rect key="frame" x="303" y="7.5" width="30" height="30"/>
                    <state key="normal">
                        <attributedString key="attributedTitle">
                            <fragment content="Edit">
                                <attributes>
                                    <color key="NSColor" red="0.76470588235294112" green="0.76470588235294112" blue="0.76470588235294112" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                    <font key="NSFont" metaFont="systemBold" size="15"/>
                                    <paragraphStyle key="NSParagraphStyle" alignment="right" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                </attributes>
                            </fragment>
...
