...
@MainActor
final class AddEditBookmarkDialogViewModel: BookmarkDialogEditing {

    /// The type of operation to perform on a bookmark.
    enum Mode {
        /// Add a new bookmark. Bookmarks can have a parent folder but not necessarily.
        /// If the users add a bookmark to the root `Bookmarks` folder, then the parent folder is `nil`.
        /// If the users add a bookmark to a different folder then the parent folder is not `nil`.
        /// If the users add a bookmark from the bookmark shortcut and `Tab` has a page loaded, then the `tabWebsite` is not `nil`.
        /// When adding a bookmark from favorite screen the `shouldPresetFavorite` flag should be set to `true`.
        case add(tabWebsite: WebsiteInfo? = nil, parentFolder: BookmarkFolder? = nil, shouldPresetFavorite: Bool = false)
        /// Edit an existing bookmark.
        case edit(bookmark: Bookmark)
...
