...

    var pushController: ((UIViewController) -> Void)?

    var cancellables = Set<AnyCancellable>()

    lazy var debugStoryboard = {
        UIStoryboard(name: "Debug", bundle: nil)
    }()

    init(dependencies: DebugScreen.Dependencies) {
        self.dependencies = dependencies
        refreshFilter()
        refreshToggles()
...
        let title: String
        let fetchAction: () -> Void

        static func privacyConfiguration(fetchAction: @escaping () -> Void) -> ConfigurationItem {
            return ConfigurationItem(
                configuration: .privacyConfiguration,
                title: "Privacy Config",
                fetchAction: fetchAction
            )
        }

        static func remoteMessagingConfiguration(fetchAction: @escaping () -> Void) -> ConfigurationItem {
            return ConfigurationItem(
...
