...
                self.viewModel?.setCustomURL(nil, for: item.configuration)
                self.tableView?.reloadData()
            }
            alert.addAction(resetAction)
        }

        let submitAction = UIAlertAction(title: "Override", style: .default) { _ in
            let urlString = alert.textFields?.first?.text
            let customURL = urlString.flatMap { URL(string: $0) }
            self.viewModel?.setCustomURL(customURL, for: item.configuration)
            
            // Trigger fetch for the updated configuration
            self.viewModel?.fetchConfiguration(for: item.configuration) { _ in
...
