...
        panGestureRecognizer.cancelsTouchesInView = false
        addGestureRecognizer(panGestureRecognizer)
    }

    private func setUpAccessibility() {
        searchButton.accessibilityLabel = UserText.searchInputToggleSearchButtonTitle
        searchButton.accessibilityIdentifier = "Browser.OmniBar.Button.ModeToggle.Search"
        searchButton.accessibilityTraits = .button

        aiChatButton.accessibilityLabel = UserText.searchInputToggleAIChatButtonTitle
        aiChatButton.accessibilityIdentifier = "Browser.OmniBar.Button.ModeToggle.AIChat"
        aiChatButton.accessibilityTraits = .button
    }

    private func updateSelection(animated: Bool) {
        let isSearchSelected = selectedMode == .search
        selectedLeadingConstraint.constant = isSearchSelected ? Metrics.selectedLeadingLeft : Metrics.selectedLeadingRight
...
