appId: com.duckduckgo.mobile.ios
---

- tapOn: Bookmarks
- tapOn: Edit
- tapOn: ".*Spread Privacy.*"
- scroll
- scroll
- tapOn: Delete
- tapOn: Delete
- tapOn: Done
- tapOn: Done