appId: com.duckduckgo.mobile.ios
tags:
    - iphone
    - privacy
name: 11_content_scope_experiments_setup

---

# Set up 
- runFlow: 
    file: ../shared/setup.yaml

#Open Debug Menu
- tapOn: Browsing menu
- tapOn: Settings
- runFlow:
    file: ../shared/open_debug_menu.yaml

##Set internal status
- tapOn:
    text: "0"
    index: 0

##Override Privacy Config
- scrollUntilVisible: 
    element: "Configuration URLs"
- tapOn: "Configuration URLs"
- tapOn: "Privacy Config"
- inputText: "https://privacy-test-pages.site/content-scope-scripts/infra/config/conditional-matching-experiments.json"
- tapOn: "Override"
- tapOn: "Debug"
- tapOn: "Settings"
- tapOn: "Done"

#Visit Test site
- tapOn:
    id: "searchEntry"
- inputText: "https://privacy-test-pages.site/content-scope-scripts/infra/pages/conditional-matching-experiments.html"
- pressKey: Enter

# Check if test suite passes
- assertVisible: "pass, application status"
